# Evolve-Shader

./: .gitignore  CMakeLists.txt  Evolve shader 0.1.1.7z  Evolve shader.sln  Evolve shader.vcxproj  Evolve shader.vcxproj.filters  README.zh-CN.md  changelog.md  main.cpp  readme.md
.github/workflows/: release.yml
frag/: 1.frag  2.frag
include/: ChannelConfig.h  GLTypes.h  PresetManager.h  Resources.h  ShaderIO.h  ShaderProgram.h
presets/blackhole/: config.json
presets/fish/: config.json
presets/fish/frag/: 1.frag
